@@ -1,3 +1,9 @@
+2002-10-01  Adam Fedor  <fedor@gnu.org>
+
+	* Documentation/filesystem.texi: New file.
+
+	* Documentation/README.MinGWOnCygwin: Update troubleshooting.
+
 Tue Oct  1 01:08:23 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Instance/bundle.make: Rewritten build rules so that they are
